# microcoap_ed

./: .gitignore  CMakeLists.txt  README.md  coap.c  coap.h
src/: CMakeLists.txt  byte_order.h  coap.c  coap.h
test/: CMakeLists.txt
test/coap_build/: CMakeLists.txt  coap_build_header.c  coap_order_options.c
test/coap_make_option/: CMakeLists.txt  coap_make_option_blockwise.c
test/coap_parse/: CMakeLists.txt  coap_get_blockwise_option_information.c  coap_parse_complete.c
